test/TestPhases/causality/invalid/looploopinst.blc
module

activity main ()() 
    repeat
        var x: int32 = 17
        while x > 0 repeat
            x = x - 17
            
        end
        await true
    end
end
